# BoxGame_Challenge

./: .gitignore  CMakeLists.txt  README.md  app_requirements.txt  classDiagram.txt
includes/: BlueBox.h  Box.h  GreenBox.h  Player.h
src/: BlueBox.cpp  Box.cpp  GreenBox.cpp  Player.cpp  asaphus_coding_challenge.cpp
